# ChangeLog for media-video/nvidia-settings
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-settings/ChangeLog,v 1.97 2011/02/02 17:18:58 jlec Exp $

*nvidia-settings-260.19.36 (02 Feb 2011)

  02 Feb 2011; Justin Lecher <jlec@gentoo.org>
  +nvidia-settings-260.19.36.ebuild:
  non-maintainer: Version Bump

  03 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  nvidia-settings-260.19.29.ebuild:
  stable x86, bug 349816

  24 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
  nvidia-settings-260.19.29.ebuild:
  amd64 stable wrt #348186

*nvidia-settings-260.19.29 (19 Dec 2010)

  19 Dec 2010; Justin Lecher <jlec@gentoo.org>
  +nvidia-settings-260.19.29.ebuild:
  Version Bump #339217

  05 Sep 2010; Fabio Erculiani <lxnay@gentoo.org>
  +nvidia-settings-256.52.ebuild, -nvidia-settings-256.52-r1.ebuild:
  restore nvidia-settings-256.52 ebuild in broken status

*nvidia-settings-256.52-r1 (05 Sep 2010)

  05 Sep 2010; Fabio Erculiani <lxnay@gentoo.org>
  -nvidia-settings-256.52.ebuild, +nvidia-settings-256.52-r1.ebuild:
  fix broken ebuild, it didn't install nvidia-settings executable and icons,
  used make instead of the wrapper function emake and didn't fix the
  pre-stripping problem of /usr/bin/nvidia-settings. Bumping revision

  30 Aug 2010; Doug Goldstein <cardoe@gentoo.org>
  +nvidia-settings-256.52.ebuild:
  Version bump that works with newer x11-drivers/nvidia-drivers that
  provides its own nvidia-settings app. bug #304255

  30 Aug 2010; Doug Goldstein <cardoe@gentoo.org>
  -nvidia-settings-256.52.ebuild:
  Did not mean to add this package

*nvidia-settings-195.36.31 (30 Aug 2010)
*nvidia-settings-173.14.27 (30 Aug 2010)
*nvidia-settings-173.14.25 (30 Aug 2010)

  30 Aug 2010; Doug Goldstein <cardoe@gentoo.org>
  -nvidia-settings-1.0.20070621.ebuild, -nvidia-settings-173.14.09.ebuild,
  -nvidia-settings-173.14.12.ebuild, -nvidia-settings-173.14.17.ebuild,