@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/distcc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/distcc/ChangeLog,v 1.208 2011/02/06 11:32:25 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/distcc/ChangeLog,v 1.209 2011/03/28 22:37:44 eva Exp $
+
+  28 Mar 2011; Gilles Dartiguelongue <eva@gentoo.org> distcc-3.1-r5.ebuild:
+  Pin gtk+ to slot 2.
 
   06 Feb 2011; Mart Raudsepp <leio@gentoo.org> distcc-2.18.3-r10.ebuild:
   Drop to ~mips
