@@ -1,6 +1,10 @@
 # ChangeLog for media-video/nvidia-settings
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-settings/ChangeLog,v 1.97 2011/02/02 17:18:58 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-settings/ChangeLog,v 1.98 2011/03/28 22:41:35 eva Exp $
+
+  28 Mar 2011; Gilles Dartiguelongue <eva@gentoo.org>
+  nvidia-settings-260.19.29.ebuild, nvidia-settings-260.19.36.ebuild:
+  Pin gtk+ to slot 2.
 
 *nvidia-settings-260.19.36 (02 Feb 2011)
 
